# yast-reipl

./: .gitignore  .travis.yml  Dockerfile  MAINTAINER  Makefile.in  README.md  RPMNAME  Rakefile  configure  configure.in  yast2-reipl.spec.in
.github/workflows/: ci.yml
agents/: Makefile.am  Makefile.in
doc/: Makefile.am  Makefile.in
doc/autodocs/: Makefile.am  Makefile.in
package/: yast2-reipl.changes  yast2-reipl.spec
src/: Makefile.am  Makefile.in  Reipl.ycp  complex.ycp  dialogs.ycp  helps.ycp  inst_reipl.ycp  inst_reiplauto.ycp  reipl.desktop  reipl.ycp  reipl_auto.ycp  reipl_bootloader_finish.ycp  reipl_finish.ycp  reipl_proposal.ycp  wizards.ycp
src/clients/: inst_reipl.rb  inst_reiplauto.rb  inst_reiplauto.ycp  reipl.rb  reipl.ycp  reipl_auto.rb  reipl_bootloader_finish.rb  reipl_finish.rb  reipl_proposal.rb
src/desktop/: org.opensuse.yast.Reipl.desktop  reipl.desktop
src/include/reipl/: complex.rb  complex.ycp  dialogs.rb  dialogs.ycp  helps.rb  wizards.rb
src/modules/: Reipl.rb
test/: Makefile.am  reipl_test.rb  test_helper.rb
testsuite/: Makefile.am  Makefile.in
testsuite/tests/: Reipl.rb  Reipl.ycp
